# privit

./: Makefile  provision.py
privit/: setup.cfg
privit/src/privit/: app.py  cli.py  client.py  db.py  port_scanner.py  ranku_storage.py  stogram.py  web.py
privit/src/privit/js/: app.js  chat.css  chat.js
privit2/: README.md  setup.cfg
privit2/src/privit/: app.py  client.py  db.py
privit2/src/privit/js/: app.js  chat.js
privit2/src/privit/templates/: index.html
