[metadata]
name = privit
version = 0.1.0
description = Privit community servre
author = Retoor
author_email = retoor@retoor.io
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    aiohttp>=3.10.10
    requests>=2.32.3
    aiohttp_jinja2>=1.6
    aiohttp-session>=2.12.1
    cryptography>=43.0.3
    utro @ git+https://github.com/GerbenAaltink/utro.git@main#egg=utro
    stogram_client @ git+https://github.com/GerbenAaltink/stogram_client@main#egg=stogram_client
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    privit = privit.cli:main
    client = privit.client:main
